--- a/OGA.Base/OGA.Base/packages.config
+++ b/OGA.Base/OGA.Base/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Dapper" version="1.50.7" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
+  <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net47" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net47" />
   <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net47" />
