--- a/OGA.Base/OGA.Base/OGA.Base.vbproj
+++ b/OGA.Base/OGA.Base/OGA.Base.vbproj
@@ -135,6 +135,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Sqlite.DB.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
