--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,16 @@
 /OGA.Base/OGA.Base/bin/Debug
 /OGA.Base/.vs/OGA.Base/v15/Server/sqlite3
 /OGA.Base/OGA.BL.Base/obj/Debug
+/bin
+/OGA.Base/.vs/OGA.Base/DesignTimeBuild
+/OGA.Base/OGA.BL/bin/Debug
+/OGA.Base/OGA.BL/obj/Debug
+/OGA.Base/OGA.BL.Base/bin/Debug
+/OGA.Base/OGA.DA/bin/Debug
+/OGA.Base/OGA.DA/obj/Debug
+/OGA.Base/OGA.DA.Base/bin/Debug
+/OGA.Base/OGA.DA.Base/obj/Debug
+/OGA.Base/OGA.UI/bin/Debug
+/OGA.Base/OGA.UI/obj/Debug
+/OGA.Base/OGA.UI.Base/bin/Debug
+/OGA.Base/OGA.UI.Base/obj/Debug
