--- a/OGA.Base/OGA.UI.Base/OGA.UI.Base.vbproj
+++ b/OGA.Base/OGA.UI.Base/OGA.UI.Base.vbproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B7734D46-3CCF-4941-9033-3B630E90C199}</ProjectGuid>
+    <ProjectGuid>{488254E2-E2D4-44FD-8006-E1C0923A81E6}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>OGA.BL.Base</RootNamespace>
-    <AssemblyName>OGA.BL.Base</AssemblyName>
+    <RootNamespace>OGA.UI.Base</RootNamespace>
+    <AssemblyName>OGA.UI.Base</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
@@ -18,7 +18,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>..\..\bin\</OutputPath>
-    <DocumentationFile>OGA.BL.Base.xml</DocumentationFile>
+    <DocumentationFile>OGA.UI.Base.xml</DocumentationFile>
     <NoWarn>
     </NoWarn>
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
@@ -29,7 +29,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>..\..\bin\</OutputPath>
-    <DocumentationFile>OGA.BL.Base.xml</DocumentationFile>
+    <DocumentationFile>OGA.UI.Base.xml</DocumentationFile>
     <NoWarn>
     </NoWarn>
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
@@ -67,7 +67,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLResult.vb" />
+    <Compile Include="Class1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
