--- a/OGA.Base/OGA.DA.Base/OGA.DA.Base.vbproj
+++ b/OGA.Base/OGA.DA.Base/OGA.DA.Base.vbproj
@@ -5,12 +5,13 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D2A726A8-9EE5-4F88-B2B8-94E5025DEA8C}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <StartupObject>OGA.DA.Base.My.MyApplication</StartupObject>
+    <OutputType>Library</OutputType>
+    <StartupObject>
+    </StartupObject>
     <RootNamespace>OGA.DA.Base</RootNamespace>
     <AssemblyName>OGA.DA.Base</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>WindowsForms</MyType>
+    <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
