--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 /OGA.Base/OGA.UI/obj/Debug
 /OGA.Base/OGA.UI.Base/bin/Debug
 /OGA.Base/OGA.UI.Base/obj/Debug
+/OGA.Base/OGA.BI/bin/Debug
+/OGA.Base/OGA.BI/obj/Debug
+/OGA.Base/OGA.Utility/bin/Debug
+/OGA.Base/OGA.Utility/obj/Debug
+/sql
