--- a/OGA.Base/OGA.BL/OGA.BL.vbproj
+++ b/OGA.Base/OGA.BL/OGA.BL.vbproj
@@ -84,6 +84,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PriceBL.vb" />
     <Compile Include="TargetBL.vb" />
     <Compile Include="UtilityBL.vb" />
   </ItemGroup>
