--- a/OGA.Base/OGA.BL/OGA.BL.vbproj
+++ b/OGA.Base/OGA.BL/OGA.BL.vbproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.vb" />
+    <Compile Include="CompanyBL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
