--- a/OGA.Base/OGA.BI/OGA.BI.vbproj
+++ b/OGA.Base/OGA.BI/OGA.BI.vbproj
@@ -81,6 +81,7 @@
     </Compile>
     <Compile Include="企業情報.vb" />
     <Compile Include="株価.vb" />
+    <Compile Include="移動平均.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
