--- a/OGA.Base/OGA.DA.Base/Sqlite.DB.config
+++ b/OGA.Base/OGA.DA.Base/Sqlite.DB.config
@@ -2,6 +2,6 @@
 <configuration>
   <!-- データベース接続情報 -->
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=|DataDirectory|株.db" providerName="System.Data.SQLite"/>
+    <add name="ConnectionString" connectionString="Data Source=|DataDirectory|株.db; Version=3;" providerName="System.Data.SQLite"/>
   </connectionStrings>
 </configuration>
