--- a/OGA.Base/OGA.DA/OGA.DA.vbproj
+++ b/OGA.Base/OGA.DA/OGA.DA.vbproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompanyDA.vb" />
+    <Compile Include="AleartDA.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
