--- a/OGA.Base/OGA.BL/OGA.BL.vbproj
+++ b/OGA.Base/OGA.BL/OGA.BL.vbproj
@@ -68,6 +68,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AleartBL.vb" />
     <Compile Include="Class1.vb" />
     <Compile Include="CompanyBL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
