--- a/OGA.Base/OGA.Utility/OGA.Utility.vbproj
+++ b/OGA.Base/OGA.Utility/OGA.Utility.vbproj
@@ -68,6 +68,8 @@
   <ItemGroup>
     <Compile Include="FinanceUtil.vb" />
     <Compile Include="HtmlUtil.vb" />
+    <Compile Include="IBackTest.vb" />
+    <Compile Include="Rule1.vb" />
     <Compile Include="Utility.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
