--- a/OGA.Base/OGA.BI/OGA.BI.vbproj
+++ b/OGA.Base/OGA.BI/OGA.BI.vbproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="アラート.vb" />
+    <Compile Include="ゴールデンクロス.vb" />
     <Compile Include="ターゲット.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
