--- a/OGA.Base/OGA.BL/OGA.BL.vbproj
+++ b/OGA.Base/OGA.BL/OGA.BL.vbproj
@@ -71,6 +71,7 @@
     <Compile Include="AleartBL.vb" />
     <Compile Include="Class1.vb" />
     <Compile Include="CompanyBL.vb" />
+    <Compile Include="GoldenCrossBL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
