--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /OGA.Base/OGA.Utility/bin/Debug
 /OGA.Base/OGA.Utility/obj/Debug
 /sql
+/OGA.Base/.vs/OGA.Base/v16/Server/sqlite3
+/OGA.Base/.vs/OGA.Base/v16/.suo
