--- a/OGA.Base/OGA.UI.Base/OGA.UI.Base.vbproj
+++ b/OGA.Base/OGA.UI.Base/OGA.UI.Base.vbproj
@@ -10,7 +10,8 @@
     <AssemblyName>OGA.UI.Base</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
