--- a/OGA.Base/OGA.UI/App.config
+++ b/OGA.Base/OGA.UI/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -27,6 +28,33 @@
   <connectionStrings>
     <add name="ConnectionString" connectionString="Data Source=|DataDirectory|株.db" providerName="System.Data.SQLite"/>
   </connectionStrings>
-
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="event"
+              xsi:type="File"
+              encoding="UTF-8"
+              lineEnding="LF"
+              layout="${message}"
+              fileName="${basedir}/logs/${date:format=yyyyMMdd}.log"
+              archiveNumbering="Rolling"
+              archiveFileName="${basedir}/logs/archive/{#}-event.log"
+              archiveEvery="Day" archiveDateFormat="yyyyMMdd"
+              maxArchiveFiles="7"/>
+      <target name="error"
+              xsi:type="File"
+              encoding="UTF-8"
+              lineEnding="LF"
+              layout="[${longdate}] [${uppercase:${level:padding=5}}] ${message} - ${callsite}() ${exception:format=tostring}"
+              fileName="${basedir}/logs/error.log"
+              archiveNumbering="Date"
+              archiveFileName="${basedir}/logs/archive/{#}-error.log"
+              archiveEvery="Day" archiveDateFormat="yyyyMMdd"
+              maxArchiveFiles="7"/>
+    </targets>
+    <rules>
+      <logger name="*" levels="Info,Warn" writeTo="event"/>
+      <logger name="*" levels="Error,Fatal" writeTo="error"/>
+    </rules>
+  </nlog>
 
 </configuration>
